--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@aws-sdk/client-s3": "^3.354.0",
+    "axios": "^1.4.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
@@ -9,7 +10,6 @@
   "name": "awss",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "npm i && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
